Wed May 06 11:18:24 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Update.

Wed May 06 10:00:49 GMT 2015  Olly Betts <olly@survex.com>

	* backends/flint/flint_database.cc: Fix get_changeset_revisions() not
	  to potentially read uninitialised data if a changeset file is
	  truncated.  Adapted from equivalent change already backported for
	  brass and chert.

Wed May 06 07:22:23 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Tweak comment to match xapian-omega's configure.

Wed May 06 07:21:51 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Set default value for AUTOM4TE before AC_OUTPUT so the
	  default will actually get used.

Wed May 06 07:21:04 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Add explicit AC_CANONICAL_HOST.

Wed May 06 05:32:46 GMT 2015  Olly Betts <olly@survex.com>

	* api/matchspy.cc,tests/api_nodb.cc: Eliminate needless uses of
	  AutoPtr.

Wed May 06 05:31:13 GMT 2015  Olly Betts <olly@survex.com>

	* backends/chert/chert_table.cc,backends/glass/glass_table.cc: Remove
	  duplicate includes of "omassert.h".

Wed May 06 05:30:05 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: OS X >= 10.4 apparently supports symbol visibility, so
	  update comment.

Wed May 06 05:29:15 GMT 2015  Olly Betts <olly@survex.com>

	* xapian-config.in: Remove superfluous comment left over from code
	  refactoring.

Wed May 06 05:28:48 GMT 2015  Olly Betts <olly@survex.com>

	* xapian-config.in: Fix the include directory reported by --swigflags
	  for an installed copy to include the "/xapian-1.3" component for
	  a development version.

Wed May 06 05:27:37 GMT 2015  Olly Betts <olly@survex.com>

	* backends/chert/chert_databasereplicator.cc: Use return value of
	  get_message_chunk() rather than ignoring it and repeating the check
	  in the caller.

Wed May 06 05:24:52 GMT 2015  Olly Betts <olly@survex.com>

	* api/replication.cc,backends/brass/,backends/chert/chert_database.cc,