@@ -1,7 +1,7 @@
 /** @file remoteprotocol.h
  *  @brief Remote protocol version and message numbers
  */
-/* Copyright (C) 2006,2007,2008,2009,2010 Olly Betts
+/* Copyright (C) 2006,2007,2008,2009,2010,2015 Olly Betts
  * Copyright (C) 2007,2010 Lemur Consulting Ltd
  *
  * This program is free software; you can redistribute it and/or modify
@@ -45,8 +45,9 @@
 // 34: 1.1.4 Support for metadata over with remote databases.
 // 35: 1.1.5 Support for add_spelling() and remove_spelling().
 // 35.1: 1.2.4 Support for metadata_keys_begin().
+// 35.2: 1.2.21 Sort keys in serialised MSet.
 #define XAPIAN_REMOTE_PROTOCOL_MAJOR_VERSION 35
-#define XAPIAN_REMOTE_PROTOCOL_MINOR_VERSION 1
+#define XAPIAN_REMOTE_PROTOCOL_MINOR_VERSION 2
 
 /** Message types (client -> server).
  *
@@ -83,6 +84,7 @@ enum message_type {
     MSG_GETMSET,		// Get MSet
     MSG_SHUTDOWN,		// Shutdown
     MSG_METADATAKEYLIST,	// Iterator for metadata keys
+    MSG_QUERY_NEW,		// Run Query (protocol 35.2 version)
     MSG_MAX
 };
 
@@ -110,6 +112,7 @@ enum reply_type {
     REPLY_RESULTS,		// Results (MSet)
     REPLY_METADATA,		// Metadata
     REPLY_METADATAKEYLIST,	// Iterator for metadata keys
+    REPLY_RESULTS_NEW,		// Results (MSet) (protocol 35.2 version)
     REPLY_MAX
 };
 
