@@ -2,7 +2,7 @@
  *
  * Copyright 1999,2000,2001 BrightStation PLC
  * Copyright 2002 Ananova Ltd
- * Copyright 2002,2003,2004,2005,2009 Olly Betts
+ * Copyright 2002,2003,2004,2005,2009,2015 Olly Betts
  * Copyright 2007 Lemur Consulting Ltd
  *
  * This program is free software; you can redistribute it and/or
@@ -67,6 +67,7 @@ class MergePostList : public PostList {
 
 	Xapian::docid  get_docid() const;
 	Xapian::weight get_weight() const;
+	const string * get_sort_key() const;
 	const string * get_collapse_key() const;
 
 	Xapian::weight get_maxweight() const;
