@@ -580,7 +580,10 @@ MultiMatch::get_mset(Xapian::doccount first, Xapian::doccount maxitems,
 	LOGLINE(MATCH, "Candidate document id " << did << " wt " << wt);
 	Xapian::Internal::MSetItem new_item(wt, did);
 	if (sort_by != REL) {
-	    if (sorter) {
+	    const string * ptr = pl->get_sort_key();
+	    if (ptr) {
+		new_item.sort_key = *ptr;
+	    } else if (sorter) {
 		new_item.sort_key = (*sorter)(doc);
 	    } else {
 		new_item.sort_key = vsdoc.get_value(sort_key);
