@@ -1,7 +1,7 @@
 /** @file serialise.cc
  * @brief functions to convert Xapian objects to strings and back
  */
-/* Copyright (C) 2006,2007,2008,2009,2010 Olly Betts
+/* Copyright (C) 2006,2007,2008,2009,2010,2015 Olly Betts
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -214,6 +214,50 @@ serialise_mset(const Xapian::MSet &mset)
     return result;
 }
 
+// Used by remote protocol 35.2 to fix #674.
+string
+serialise_mset_new(const Xapian::MSet &mset)
+{
+    string result;
+
+    result += encode_length(mset.get_firstitem());
+    result += encode_length(mset.get_matches_lower_bound());
+    result += encode_length(mset.get_matches_estimated());
+    result += encode_length(mset.get_matches_upper_bound());
+    result += encode_length(mset.get_uncollapsed_matches_lower_bound());
+    result += encode_length(mset.get_uncollapsed_matches_estimated());
+    result += encode_length(mset.get_uncollapsed_matches_upper_bound());
+    result += serialise_double(mset.get_max_possible());
+    result += serialise_double(mset.get_max_attained());
+
+    result += serialise_double(mset.internal->percent_factor);
+
+    result += encode_length(mset.size());
+    for (size_t i = 0; i != mset.size(); ++i) {
+	const Xapian::Internal::MSetItem & item = mset.internal->items[i];
+	result += serialise_double(item.wt);
+	result += encode_length(item.did);
+	result += encode_length(item.sort_key.size());
+	result += item.sort_key;
+	result += encode_length(item.collapse_key.size());
+	result += item.collapse_key;
+	result += encode_length(item.collapse_count);
+    }
+
+    const map<string, Xapian::MSet::Internal::TermFreqAndWeight> &termfreqandwts
+	= mset.internal->termfreqandwts;
+
+    map<string, Xapian::MSet::Internal::TermFreqAndWeight>::const_iterator j;
+    for (j = termfreqandwts.begin(); j != termfreqandwts.end(); ++j) {
+	result += encode_length(j->first.size());
+	result += j->first;
+	result += encode_length(j->second.termfreq);
+	result += serialise_double(j->second.termweight);
+    }
+
+    return result;
+}
+
 Xapian::MSet
 unserialise_mset(const char * p, const char * p_end)
 {
@@ -239,6 +283,61 @@ unserialise_mset(const char * p, const char * p_end)
 	p += len;
 	Xapian::doccount collapse_cnt = decode_length(&p, p_end, false);
 	items.push_back(Xapian::Internal::MSetItem(wt, did, key, collapse_cnt));
+    }
+
+    map<string, Xapian::MSet::Internal::TermFreqAndWeight> terminfo;
+    while (p != p_end) {
+	Xapian::MSet::Internal::TermFreqAndWeight tfaw;
+	size_t len = decode_length(&p, p_end, true);
+	string term(p, len);
+	p += len;
+	tfaw.termfreq = decode_length(&p, p_end, false);
+	tfaw.termweight = unserialise_double(&p, p_end);
+	terminfo.insert(make_pair(term, tfaw));
+    }
+
+    return Xapian::MSet(new Xapian::MSet::Internal(
+				       firstitem,
+				       matches_upper_bound,
+				       matches_lower_bound,
+				       matches_estimated,
+				       uncollapsed_upper_bound,
+				       uncollapsed_lower_bound,
+				       uncollapsed_estimated,
+				       max_possible, max_attained,
+				       items, terminfo, percent_factor));
+}
+
+// Used by remote protocol 35.2 to fix #674.
+Xapian::MSet
+unserialise_mset_new(const char * p, const char * p_end)
+{
+    Xapian::doccount firstitem = decode_length(&p, p_end, false);
+    Xapian::doccount matches_lower_bound = decode_length(&p, p_end, false);
+    Xapian::doccount matches_estimated = decode_length(&p, p_end, false);
+    Xapian::doccount matches_upper_bound = decode_length(&p, p_end, false);
+    Xapian::doccount uncollapsed_lower_bound = decode_length(&p, p_end, false);
+    Xapian::doccount uncollapsed_estimated = decode_length(&p, p_end, false);
+    Xapian::doccount uncollapsed_upper_bound = decode_length(&p, p_end, false);
+    Xapian::weight max_possible = unserialise_double(&p, p_end);
+    Xapian::weight max_attained = unserialise_double(&p, p_end);
+
+    double percent_factor = unserialise_double(&p, p_end);
+
+    vector<Xapian::Internal::MSetItem> items;
+    size_t msize = decode_length(&p, p_end, false);
+    while (msize-- > 0) {
+	Xapian::weight wt = unserialise_double(&p, p_end);
+	Xapian::docid did = decode_length(&p, p_end, false);
+	size_t len = decode_length(&p, p_end, true);
+	string sort_key(p, len);
+	p += len;
+	len = decode_length(&p, p_end, true);
+	string key(p, len);
+	p += len;
+	Xapian::doccount collapse_cnt = decode_length(&p, p_end, false);
+	items.push_back(Xapian::Internal::MSetItem(wt, did, key, collapse_cnt));
+	swap(items.back().sort_key, sort_key);
     }
 
     map<string, Xapian::MSet::Internal::TermFreqAndWeight> terminfo;
